sandc/test/fixtures/astRegression/shouldSucceed/IfChains.sand
pub class IfChains {
    pub loneIf() {
        if x {

        }
    }

    pub ifElse() {
        let y = if x {

        } else {

        };
    }

    pub ifElif() {
        if x {

        } else if y {

        }
    }

    pub ifElifElse() {
        let z = if x {

        } else if y {

        } else {

        };
    }
}