sandc/test/fixtures/astRegression/shouldFail/productions/ifTypeGuardPseudex/EmptyElseBody.sand
pub class EmptyElseBody {
    foo() {
        let a = if let b = c {
            c
        } else {
            
        };
    }
}